<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>iti.jets</groupId>
  <artifactId>e_commerce</artifactId>
  <version>1</version>
    <packaging>war</packaging>



  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <hibernate.version>6.0.2.Final</hibernate.version>
  </properties>

  <dependencies>

      <dependency>
          <groupId>org.modelmapper</groupId>
          <artifactId>modelmapper</artifactId>
          <version>2.3.8</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>2.13.0</version> <!-- Use the latest version -->
      </dependency>


      <dependency>
          <groupId>javax.persistence</groupId>
          <artifactId>javax.persistence-api</artifactId>
          <version>2.2</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.datatype</groupId>
          <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.13.0</version>
      </dependency>
      <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
            <version>1.2.6</version>
      </dependency>
      <dependency>
          <groupId>com.zaxxer</groupId>
          <artifactId>HikariCP</artifactId>
          <version>4.0.3</version>
      </dependency>
      <dependency>
          <groupId>org.hibernate.orm</groupId>
          <artifactId>hibernate-core</artifactId>
          <version>6.0.2.Final</version>
      </dependency>

      <dependency>
          <groupId>org.apache.tomcat</groupId>
          <artifactId>tomcat-servlet-api</artifactId>
          <version>9.0.50</version>
          <scope>provided</scope>
      </dependency>
    
    <dependency>
      <groupId>jakarta.platform</groupId>
      <artifactId>jakarta.jakartaee-api</artifactId>
      <version>9.0.0</version>
      <scope>provided</scope>
    </dependency>

      <dependency>
          <groupId>jakarta.servlet</groupId>
          <artifactId>jakarta.servlet-api</artifactId>
          <version>6.0.0</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>jakarta.servlet.jsp</groupId>
          <artifactId>jakarta.servlet.jsp-api</artifactId>
          <version>3.1.0</version>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>com.mysql</groupId>
          <artifactId>mysql-connector-j</artifactId>
          <version>8.0.33</version>
      </dependency>
      <dependency>
          <groupId>jakarta.json</groupId>
          <artifactId>jakarta.json-api</artifactId>
          <version>2.0.1</version>
      </dependency>

      <dependency>
          <groupId>jakarta.json.bind</groupId>
          <artifactId>jakarta.json.bind-api</artifactId>
          <version>2.0.0</version>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>org.glassfish</groupId>
          <artifactId>jakarta.json</artifactId>
          <version>2.0.1</version>
      </dependency>

      <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
          <version>2.9.1</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>2.15.3</version>
      </dependency>

      <dependency>
          <groupId>jakarta.json</groupId>
          <artifactId>jakarta.json-api</artifactId>
          <version>2.0.1</version>
      </dependency>

      <dependency>
          <groupId>jakarta.json.bind</groupId>
          <artifactId>jakarta.json.bind-api</artifactId>
          <version>2.0.0</version>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>org.glassfish</groupId>
          <artifactId>jakarta.json</artifactId>
          <version>2.0.1</version>
      </dependency>
  </dependencies>

  <build>

      <plugins>

        <plugin>
          <groupId>org.apache.tomcat.maven</groupId>
          <artifactId>tomcat7-maven-plugin</artifactId>
          <version>2.2</version>
          <configuration>
              <url>http://localhost:9090/manager/text</url>
              <path>/e_commerce</path>
              <server>TomcatServer</server>
              <username>tomcat</username>
              <password>tomcat</password>
          </configuration>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
              <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>


          <!-- hibernate tool -->
           <plugin>
            <groupId>org.hibernate.tool</groupId>
            <artifactId>hibernate-tools-maven</artifactId>
            <version>${hibernate.version}</version>

            <dependencies>
              <dependency>
                <groupId>org.hibernate.tool</groupId>
                <artifactId>hibernate-tools-orm</artifactId>
                <version>${hibernate.version}</version>
              </dependency>

              <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>8.0.33</version>
              </dependency>

            </dependencies>

            <executions>
              <execution>
                <id>entity-generation</id>
                <phase>generate-sources</phase>
                <goals>
                  <goal>hbm2java</goal>
                </goals>
                <configuration>
                  <ejb3>true</ejb3>
                  <jdk5>true</jdk5>
                </configuration>
              </execution>
            </executions>
          </plugin>

      </plugins>

  </build>

</project>
